--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,62 +1,59 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
-    container_name: nginx
-    ports:
-      - "443:443"
-      - "80:80"
-    volumes:
-      - wordpress_files:/var/www/html
-    networks:
-      - inception_network
-    depends_on:
-      - wordpress
-    restart: always
+    nginx:
+        build: ./requirements/nginx
+        container_name: nginx
+        ports:
+            - "443:443"
+        volumes:
+            - wp-data:/var/www/html
+        networks:
+            - inception-network
+        depends_on:
+            - wordpress
+        restart: unless-stopped
+        env_file:
+            - .env
 
-  wordpress:
-    build:
-      context: ./wordpress
-      dockerfile: Dockerfile
-    container_name: wordpress
-    volumes:
-      - wordpress_files:/var/www/html
-    networks:
-      - inception_network
-    depends_on:
-      - mariadb
-    environment:
-      - WORDPRESS_DB_HOST=mariadb:3306
-      - WORDPRESS_DB_NAME=wordpress
-      - WORDPRESS_DB_USER=wpuser
-      - WORDPRESS_DB_PASSWORD=wppassword
-    restart: always
+    wordpress:
+        build: ./requirements/wordpress
+        container_name: wordpress
+        volumes:
+            - wp-data:/var/www/html
+        networks:
+            - inception-network
+        depends_on:
+            - mariadb
+        restart: unless-stopped
+        env_file:
+            - .env
 
-  mariadb:
-    build:
-      context: ./mariadb
-      dockerfile: Dockerfile
-    container_name: mariadb
-    volumes:
-      - wordpress_db:/var/lib/mysql
-    networks:
-      - inception_network
-    environment:
-      - MYSQL_ROOT_PASSWORD=rootpassword
-      - MYSQL_DATABASE=wordpress
-      - MYSQL_USER=wpuser
-      - MYSQL_PASSWORD=wppassword
-    restart: always
+    mariadb:
+        build: ./requirements/mariadb
+        container_name: mariadb
+        volumes:
+            - db-data:/var/lib/mysql
+        networks:
+            - inception-network
+        restart: unless-stopped
+        env_file:
+            - .env
 
 volumes:
-  wordpress_db:
-    driver: local
-  wordpress_files:
-    driver: local
+    wp-data:
+        driver: local
+        driver_opts:
+            type: none
+            o: bind
+            device: /home/${USER}/data/wordpress
+    db-data:
+        driver: local
+        driver_opts:
+            type: none
+            o: bind
+            device: /home/${USER}/data/mariadb
 
 networks:
-  inception_network:
-    driver: bridge
+    inception-network:
+        driver: bridge
