--- a/srcs/.env
+++ b/srcs/.env
@@ -1,5 +1,5 @@
 # Domain Configuration
-DOMAIN_NAME=login.42.fr
+DOMAIN_NAME=serferna.42.fr
 
 # MySQL/MariaDB Configuration
 MYSQL_ROOT_PASSWORD=StrongRootPassword123!
@@ -10,10 +10,10 @@ MYSQL_PASSWORD=WordPressDBPass456!
 # WordPress Configuration
 WP_ADMIN_USER=admin_user
 WP_ADMIN_PASSWORD=AdminWPPassword789!
-WP_ADMIN_EMAIL=admin@login.42.fr
+WP_ADMIN_EMAIL=admin@serferna.42.fr
 WP_USER=regular_user
 WP_USER_PASSWORD=UserWPPassword012!
-WP_USER_EMAIL=user@login.42.fr
+WP_USER_EMAIL=user@serferna.42.fr
 
 # SSL Configuration
 SSL_CERT=/etc/nginx/ssl/nginx-selfsigned.crt
