--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -22,7 +22,7 @@ http {
     # WordPress site - HTTPS only
     server {
         listen 443 ssl http2;
-        server_name login.42.fr www.login.42.fr;
+        server_name serferna.42.fr www.serferna.42.fr;
         root /var/www/html;
         index index.php index.html index.htm;
 
