--- a/srcs/.env
+++ b/srcs/.env
@@ -1,20 +1,17 @@
-# Domain Configuration
-DOMAIN_NAME=serferna.42.fr
+# Domain
+DOMAIN_NAME=tu_login.42.fr
 
-# MySQL/MariaDB Configuration
-MYSQL_ROOT_PASSWORD=StrongRootPassword123!
+# MySQL/MariaDB
+MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db_root_password
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wpuser
-MYSQL_PASSWORD=WordPressDBPass456!
+MYSQL_PASSWORD_FILE=/run/secrets/db_password
 
-# WordPress Configuration
-WP_ADMIN_USER=admin_user
-WP_ADMIN_PASSWORD=AdminWPPassword789!
-WP_ADMIN_EMAIL=admin@serferna.42.fr
+# WordPress
+WP_TITLE=My Inception Site
+WP_ADMIN_USER=administrator_user
+WP_ADMIN_PASSWORD_FILE=/run/secrets/credentials
+WP_ADMIN_EMAIL=admin@example.com
 WP_USER=regular_user
-WP_USER_PASSWORD=UserWPPassword012!
-WP_USER_EMAIL=user@serferna.42.fr
-
-# SSL Configuration
-SSL_CERT=/etc/nginx/ssl/nginx-selfsigned.crt
-SSL_KEY=/etc/nginx/ssl/nginx-selfsigned.key
+WP_USER_EMAIL=user@example.com
+WP_USER_PASSWORD=UserPass123!
