--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,8 +1,3 @@
-user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
-
 events {
     worker_connections 1024;
 }
@@ -11,55 +6,28 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-                    '$status $body_bytes_sent "$http_referer" '
-                    '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log /var/log/nginx/access.log main;
-    sendfile on;
-    keepalive_timeout 65;
-
-    # WordPress site - HTTPS only
     server {
-        listen 443 ssl http2;
-        server_name serferna.42.fr www.serferna.42.fr;
-        root /var/www/html;
-        index index.php index.html index.htm;
+        listen 443 ssl;
+        listen [::]:443 ssl;
 
-        # SSL configuration
-        ssl_certificate /etc/nginx/ssl/nginx-selfsigned.crt;
-        ssl_certificate_key /etc/nginx/ssl/nginx-selfsigned.key;
+        server_name ${DOMAIN_NAME};
+
+        ssl_certificate /etc/nginx/ssl/nginx.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx.key;
         ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
-        ssl_prefer_server_ciphers on;
 
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        root /var/www/html;
+        index index.php index.html;
 
         location / {
             try_files $uri $uri/ /index.php?$args;
         }
 
         location ~ \.php$ {
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            include fastcgi_params;
             fastcgi_pass wordpress:9000;
             fastcgi_index index.php;
-            include fastcgi_params;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-        }
-
-        location ~ /\.ht {
-            deny all;
-        }
-
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-            expires 1y;
-            add_header Cache-Control "public, immutable";
         }
     }
 }
