--- a/srcs/.env
+++ b/srcs/.env
@@ -1,17 +1,21 @@
-# Domain
-DOMAIN_NAME=tu_login.42.fr
+NGINX_PORT=443
+DOMAIN_NAME=serferna.42.fr
 
-# MySQL/MariaDB
-MYSQL_ROOT_PASSWORD_FILE=/run/secrets/db_root_password
-MYSQL_DATABASE=wordpress
-MYSQL_USER=wpuser
-MYSQL_PASSWORD_FILE=/run/secrets/db_password
+# MariaDB
+DB_HOSTNAME=mariadb
+DB_DATABASE=wordpress
+DB_ROOT_PASSWORD=1234
+DB_USER_NAME=serferna
+DB_USER_PASSWORD=1234
 
 # WordPress
-WP_TITLE=My Inception Site
-WP_ADMIN_USER=administrator_user
-WP_ADMIN_PASSWORD_FILE=/run/secrets/credentials
-WP_ADMIN_EMAIL=admin@example.com
-WP_USER=regular_user
-WP_USER_EMAIL=user@example.com
-WP_USER_PASSWORD=UserPass123!
+WP_DB_HOST=mariadb:3306
+WP_DB_NAME=wordpress
+
+WP_USER=serferna
+WP_PASSWORD=1234
+WP_EMAIL=serferna@student.42madrid.com
+
+WP_SECOND_USER=invitado
+WP_SECOND_PASSWORD=invitado42
+WP_SECOND_EMAIL=invitado@student.42madrid.com
