--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,82 +1,70 @@
-version: "3.8"
-
 services:
-    mariadb:
-        container_name: mariadb
-        build:
-            context: ./requirements/mariadb
-            dockerfile: Dockerfile
-        image: mariadb
-        volumes:
-            - mariadb_data:/var/lib/mysql
-        networks:
-            - inception
-        env_file:
-            - .env
-        secrets:
-            - db_root_password
-            - db_password
-        restart: always
+  nginx:
+    container_name:
+      nginx
+    build:
+      context: ./requirements/nginx
+    volumes:
+      - wordpress_data:/var/www/html # Comentado, puedes activar si usas volumen nombrado
+    #  - /home/serferna/data/wordpress:/var/www/html
+    ports:
+      - "${NGINX_PORT}:443"
+    networks:
+      - inception
+    depends_on:
+      - wordpress
+    restart: always
 
-    wordpress:
-        container_name: wordpress
-        build:
-            context: ./requirements/wordpress
-            dockerfile: Dockerfile
-        image: wordpress
-        volumes:
-            - wordpress_data:/var/www/html
-        networks:
-            - inception
-        env_file:
-            - .env
-        secrets:
-            - db_password
-            - credentials
-        depends_on:
-            - mariadb
-        restart: always
+  mariadb:
+    container_name:
+      mariadb
+    build:
+      context: .
+      dockerfile: requirements/mariadb/Dockerfile
+    volumes:
+      - mariadb_data:/var/lib/mysql
+    #  - /home/serferna/data/mariadb:/var/lib/mysql
+    networks:
+      - inception
+    env_file:
+      - .env
+    restart: always
 
-    nginx:
-        container_name: nginx
-        build:
-            context: ./requirements/nginx
-            dockerfile: Dockerfile
-        image: nginx
-        volumes:
-            - wordpress_data:/var/www/html
-        networks:
-            - inception
-        env_file:
-            - .env
-        ports:
-            - "443:443"
-        depends_on:
-            - wordpress
-        restart: always
-
-volumes:
-    mariadb_data:
-        driver: local
-        driver_opts:
-            type: none
-            o: bind
-            device: /home/${USER}/data/mysql
-    wordpress_data:
-        driver: local
-        driver_opts:
-            type: none
-            o: bind
-            device: /home/${USER}/data/wordpress
+  wordpress:
+    container_name:
+      wordpress
+    build:
+      context: ./requirements/wordpress
+    volumes:
+      - wordpress_data:/var/www/html
+    #  - /home/serferna/data/wordpress:/var/www/html
+    networks:
+      - inception
+    env_file:
+      - .env
+    depends_on:
+      - mariadb
+    restart: always
 
 networks:
-    inception:
-        driver: bridge
+  inception:
+    driver: bridge
 
-secrets:
-    db_root_password:
-        file: ../secrets/db_root_password.txt
-    db_password:
-        file: ../secrets/db_password.txt
-    credentials:
-        file: ../secrets/credentials.txt
+#volumes:
+  #wordpress_data:
+  #mariadb_data:
+
+volumes:
+  wordpress_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/serferna/data/wordpress
+      o: bind
+
+  mariadb_data:
+    driver: local
+    driver_opts:
+      type: none
+      device: /home/serferna/data/mariadb
+      o: bind
