--- a/srcs/requirements/wordpress/conf/php.ini
+++ b/srcs/requirements/wordpress/conf/php.ini
@@ -1,27 +1,8 @@
-; PHP Configuration for WordPress
-
-; Basic settings
-memory_limit = 256M
-max_execution_time = 300
-max_input_time = 300
+; Archivo php.ini personalizado
 upload_max_filesize = 64M
 post_max_size = 64M
-max_file_uploads = 20
-
-; Error reporting
-display_errors = Off
+max_execution_time = 300
+memory_limit = 256M
+display_errors = On
 log_errors = On
-error_log = /var/log/php82/error.log
-
-; Date timezone
-date.timezone = Europe/Madrid
-
-; Security
-expose_php = Off
-allow_url_fopen = On
-allow_url_include = Off
-
-; Session
-session.cookie_secure = 1
-session.cookie_httponly = 1
-session.use_strict_mode = 1
+error_log = /var/log/php_errors.log
