up 3.0 esto se esta saliendo de madres

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -24,6 +24,9 @@ services:
             - inception
         env_file:
             - .env
+        secrets:
+            - db_root_password
+            - db_user_password
         restart: always
 
     wordpress:
@@ -36,9 +39,23 @@ services:
             - inception
         env_file:
             - .env
+        secrets:
+            - db_user_password
+            - wp_admin_password
+            - wp_second_password
         depends_on:
             - mariadb
         restart: always
+
+secrets:
+    db_root_password:
+        file: ../secrets/db_root_password.txt
+    db_user_password:
+        file: ../secrets/db_user_password.txt
+    wp_admin_password:
+        file: ../secrets/wp_admin_password.txt
+    wp_second_password:
+        file: ../secrets/wp_second_password.txt
 
 networks:
     inception:
