--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,26 +1,24 @@
-# Imagen base mínima
 FROM debian:bullseye
 
-# Instalamos nginx y limpiamos cache
-RUN	apt-get update -y && \
+# Paso 1 - Instalar nginx y utilidades
+RUN apt-get update -y && \
     apt-get upgrade -y && \
     apt-get install -y nginx openssl && \
-    apt-get clean
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Copiar el script y el archivo de configuración
+# Paso 2 - Copiar scripts y configuración
 COPY tools/generate_certs.sh /tmp/generate_certs.sh
-#COPY html/index.html /var/www/html/index.html
 COPY conf/default.conf /etc/nginx/sites-available/default
 
-# Dar permisos de ejecución al script y ejecutarlo
+# Paso 3 - Generar certificados y ajustar permisos
 RUN chmod +x /tmp/generate_certs.sh && \
     /tmp/generate_certs.sh
 
 RUN chmod -R 755 /var/www/html
 RUN chown -R www-data:www-data /var/www/html
 
-# Declaramos el puerto que usará nginx (sólo informativo)
+# Paso 4 - Puerto expuesto (informativo)
 EXPOSE 443
 
-# Comando que se ejecutará cuando el contenedor arranca
+# Paso 5 - Comando de arranque
 CMD ["nginx", "-g", "daemon off;"]
