--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
     nginx:
         container_name: nginx
+        image: nginx:inception-1.0
         build:
             context: ./requirements/nginx
         volumes:
@@ -15,6 +16,7 @@ services:
 
     mariadb:
         container_name: mariadb
+        image: mariadb:inception-1.0
         build:
             context: .
             dockerfile: requirements/mariadb/Dockerfile
@@ -27,10 +29,12 @@ services:
         secrets:
             - db_root_password
             - db_user_password
+            - db_second_password
         restart: always
 
     wordpress:
         container_name: wordpress
+        image: wordpress:inception-1.0
         build:
             context: ./requirements/wordpress
         volumes:
@@ -52,6 +56,8 @@ secrets:
         file: ../secrets/db_root_password.txt
     db_user_password:
         file: ../secrets/db_user_password.txt
+    db_second_password:
+        file: ../secrets/db_second_password.txt
     wp_admin_password:
         file: ../secrets/wp_admin_password.txt
     wp_second_password:
@@ -66,12 +72,12 @@ volumes:
         driver: local
         driver_opts:
             type: none
-            device: /home/serferna/data/wordpress
+            device: ${DATA_DIR:-/home/serferna/data}/wordpress
             o: bind
 
     mariadb_data:
         driver: local
         driver_opts:
             type: none
-            device: /home/serferna/data/mariadb
+            device: ${DATA_DIR:-/home/serferna/data}/mariadb
             o: bind
