--- a/srcs/.env
+++ b/srcs/.env
@@ -5,6 +5,7 @@ DOMAIN_NAME=serferna.42.fr
 DB_HOSTNAME=mariadb
 DB_DATABASE=wordpress
 DB_USER_NAME=serferna
+DB_SECOND_NAME=wp_reader
 
 # WordPress
 WP_DB_HOST=mariadb:3306
